# intake-markdown

./: .gitignore  LICENSE  README.md  environment.yml  pyproject.toml  setup.py
src/intake_markdown/: __init__.py  intake_markdown.py
