[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "intake-markdown"
version = "0.0.1"
authors = [
  { name="James Morley", email="jammor966@gmail.com" },
]
description = "A intake driver for use with markdown files"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
dependencies = [
    "intake",
    "ipython",
    "requests",
    "aiohttp",
    "Pygments",
    "markdown"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Anaconda License",
    "Operating System :: OS Independent",
]
